2004-11-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b273

	* Change: Allow session-sharing in devMode so that pages 
	  can be validated using the W3 validation links

2004-11-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b272

	* Change: Never put case statements after default ... dur.  My bad.

2004-11-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b271

	* Add:  New print affiliate "Fotoserve"

2004-11-11  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b270

	* Change: Use file_get_contents (when it's available) instead of using
	  the while loop to fread.  Could be internally faster.

	* Change: Modify the version ranges to be 5.x and 6.x for the IM issue
	  and add a link to check_imagemagick for users who don't know what
	  version they have.

2004-11-11  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b269

	* Fix: fitToWindow failed on PHP where . was not in includepath.

2004-11-09  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b268

	* Fix: Only try to send email after saving album data, when email is activated.
	       This prevents an errormessage when creating album with debugmode on.
	  TODO: better way of debug output.

2004-11-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b267

	* Change: Refine the search regex to be faster and more accurate

2004-11-08  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b266

	* Fix 1061778: Tiny typo

	* Fix 1062609: ImageMagick 6.1.0+ switched its parameters again,
	  we're now going to have to require users to specify which version
	  that they're using.

2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b265

	* Fix 973081: Add some complicated regex to search.php to prevent
	  our highlight routines from breaking URLs when a portion of the
	  href matches the searchstring.  Still can be enhanced to work with
	  non-<a> cases.

2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b264

	* Fix: Don't display rss.php in offline mode
